@@ -20,39 +20,35 @@ sourceSets {
 
 springBoot {
     mainClassName = project.ext.mainClassName
-
+    buildInfo()
 }
 
 if (plugins.hasPlugin("war")) {
     javadoc {
         enabled false
     }
-    war {
-        enabled = !rootProject.publishingRelease
-    }
+    
     bootWar {
         mainClassName = project.ext.mainClassName
-        enabled = !rootProject.publishingRelease
-        
-        def currentTime = java.time.ZonedDateTime.now()
-
         manifest {
             attributes(
                     "Automatic-Module-Name": project.name,
                     "Implementation-Title": project.name,
                     "Implementation-Vendor": project.group,
                     "Created-By": project.group,
-                    "Implementation-Date": currentTime,
+                    "Implementation-Date": java.time.ZonedDateTime.now(),
                     "Specification-Version": rootProject.currentRevision,
                     "Implementation-Version": project.version)
         }
         from "${buildDir}/resources/main", { into "WEB-INF/classes" }
+        launchScript()
     }
+    
 } else {
     bootJar {
         mainClassName = project.ext.mainClassName
-        enabled = !rootProject.publishingRelease
         from "${buildDir}/resources/main", { into "WEB-INF/classes" }
+        launchScript()
     }
 }
 
@@ -67,7 +63,7 @@ bootRun {
     sourceResources sourceSets.bootRun
     systemProperties = System.properties
     
-    def list = ["--add-modules", "java.se.ee" ]
+    def list = []
     if (rootProject.enableRemoteDebugging) {
         list.add("-Xrunjdwp:transport=dt_socket,address=5000,server=y,suspend=n")
     }
